--- a/.github/workflows/activation.yml
+++ b/.github/workflows/activation.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch: {}
 jobs:
   activation:
-    name: Request manual activation file 🔑
+    name: Request manual activation file
     runs-on: ubuntu-latest
     steps:
       # Request manual activation file
