--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.ide.visualstudio": "2.0.14",
     "com.unity.render-pipelines.universal": "10.8.1",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
